--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "react-spinners-kit",
-    "version": "1.9.1",
+    "name": "@slnsw/react-spinners-kit",
+    "version": "1.9.2",
     "description": "A collection of loading spinners",
     "main": "./lib/index.js",
     "repository": {
@@ -74,16 +74,16 @@
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-jsx-a11y": "^6.1.1",
         "eslint-plugin-react": "^7.11.1",
-        "jest": "^25.0.0",
+        "jest": "^29.0.0",
         "mini-css-extract-plugin": "^0.5.0",
-        "node-sass": "^4.11.0",
-        "parcel-bundler": "^1.12.4",
+        "parcel": "^2.0.0",
         "path": "^0.12.7",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.14.2",
         "react-addons-test-utils": "^15.6.2",
         "react-syntax-highlighter": "^9.0.0",
         "rimraf": "^2.6.2",
+        "sass": "^1.55.0",
         "sass-loader": "^7.1.0",
         "size-limit": "^2.2.3",
         "webpack": "^4.41.4",
