Sick of fighting react-syntax-highlighter

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "prettier": "prettier --config .prettierrc.json --write src/**/*.js",
         "test:watch": "jest --watch",
         "test": "jest",
-        "lint": "./node_modules/.bin/eslint --ext .js --ext .jsx ./src",
+        "lint": "eslint --ext .js --ext .jsx ./src",
         "patch": "npm version patch && npm publish && npm run clean",
         "minor": "npm version minor && npm publish && npm run clean",
         "major": "npm version major && npm publish && npm run clean",
@@ -78,10 +78,11 @@
         "mini-css-extract-plugin": "^0.5.0",
         "parcel": "^2.0.0",
         "path": "^0.12.7",
-        "postcss-loader": "^3.0.0",
+        "postcss": "^8.4.16",
+        "postcss-loader": "^4.3.0",
         "prettier": "^1.14.2",
         "react-addons-test-utils": "^15.6.2",
-        "react-syntax-highlighter": "^9.0.0",
+        "react-syntax-highlighter": "^15.5.0",
         "rimraf": "^2.6.2",
         "sass": "^1.55.0",
         "sass-loader": "^7.1.0",
