--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     ],
     "scripts": {
         "start": "parcel examples/index.html",
-        "build": "npm run prettier && npm run lint && npm run clean && webpack --mode=production && parcel build  --no-source-maps --no-cache --public-url ./ examples/index.html",
+        "build": "npm run prettier && npm run lint && npm run clean && webpack --mode=production && parcel build  --no-source-maps --no-cache --target demo --public-url ./ examples/index.html",
         "clean": "rimraf lib rimraf dist",
         "prettier": "prettier --config .prettierrc.json --write src/**/*.js",
         "test:watch": "jest --watch",
@@ -120,6 +120,11 @@
                     "jest"
                 ]
             }
+        }
+    },
+    "targets": {
+        "demo": {
+            "source": "examples/index.html"
         }
     }
 }
